--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -7,7 +7,8 @@
 
     }
     section#login{
-        width: 70vw;          
+        width: 70vw;  
+        height: 280px;        
     }
 
     section > div#imagem{
@@ -29,7 +30,8 @@
 
     }
     section#login{
-        width: 70vw;          
+        width: 70vw;    
+        height: 300px;      
     }
 
     section > div#imagem{
